# imdown

./: .gitignore  README.md  codecov.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml
example/: make_example_figs.py
example/markdown_files/: all_filetypes.md  build_directory_specified.md  manually_adjusted.md  manually_adjusted_and_updated.md  only_pdfs.md
imdown/: imdown.py
imdown/tests/: test_imdown.py
